--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@ body {
 .main-container {
   margin-left: 50px;
   margin-right: 50px;
-  width: 900px; /* Fixed width */
+  width: 1100px; /* Fixed width */
 }
 
 .content-wrapper {
-  padding: 30px;
-  margin-top: 50px;
+  padding: 10px;
+  /* margin-top: 50px; */
 }
 
 h2 {
