--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 html {
   color: #ffffff;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -20,6 +21,11 @@ body {
   justify-content: center;
   align-items: center;
   background: #1a1a1a;
+}
+
+:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(52, 144, 220, 0.8);
 }
 
 .main-container {
@@ -36,7 +42,7 @@ body {
 h2 {
   color: #ffffff;
   text-align: center;
-  font-size: 48px;
+  font-size: 3vw;
   letter-spacing: -0.2px;
   font-family: "Merriweather", serif;
 }
@@ -44,9 +50,10 @@ h2 {
 p {
   max-width: 50rem;
   text-align: center;
-  margin-top: 24px;
-  margin-bottom: 100px;
+  margin-top: 1.5rem;
+  margin-bottom: 6.25rem;
   color: #cccccc;
+  font-size: 1.2vw;
 }
 
 .main-content {
@@ -85,15 +92,18 @@ p {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .download-button:hover {
   background-color: #2779bd;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .download-button:disabled {
   background-color: grey;
+  cursor: not-allowed;
 }
 
 .preview-image {
@@ -107,22 +117,23 @@ p {
 @media screen and (max-width: 768px) {
   .content-wrapper {
     margin-top: 20px;
+    padding: 10px;
   }
 
   h2 {
-    font-size: 28px;
+    font-size: 6vw;
   }
 
   p {
-    font-size: 16px;
-    word-spacing: normal;
+    font-size: 4vw;
     margin-bottom: 40px;
     margin-top: 15px;
   }
 
   .main-content {
-    font-size: 16px;
+    font-size: 4vw;
     word-spacing: normal;
+    padding: 12px;
   }
 
   .input-container {
